fix magento modal scrollbar

--- a/web/css/_xtend2mage.less
+++ b/web/css/_xtend2mage.less
@@ -103,13 +103,6 @@ button,
   }
 }
 
-body._has-modal {
-  overflow-y: hidden;
-  .modal-popup._show {
-    overflow-y: scroll;
-  }
-}
-
 //////////////////////
 // tab
 //////////////////////
